fixed buffer issues with collision detection. cropped monkey pic

--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 .character {
     left: 20px;
     position: absolute;
-    height: 100px;
-    width: 100px;
+    height: 90px;
+    width: 90px;
     z-index: 0;
 }
 
